internal/translator/testdata/namespace_include/input.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: different-namespace
  namespace: default
spec: 
  virtualhost:
    fqdn: root.bar.com
  routes: 
    - match: /
      services: 
        - name: s1
          port: 80
    - match: /service2
      delegate:
        name: service2
        namespace: other
