internal/translator/testdata/namespace_include/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: different-namespace
  namespace: default
spec:
  includes:
  - conditions:
    - prefix: /service2
    name: service2
    namespace: other
  routes:
  - conditions:
    - prefix: /
    services:
    - name: s1
      port: 80
  virtualhost:
    fqdn: root.bar.com
